--- a/styles.css
+++ b/styles.css
@@ -302,14 +302,14 @@ th {
   color: white;
 }
 
-.header-timer {
+.timer {
   background-color: #f26222;
   border-radius: 10px;
   color: white;
   margin-top: 40px;
 }
 
-.header-timer .timer__text {
+.timer .timer__text {
   font-size: 16px;
   font-weight: bold;
   text-align: center;
@@ -2256,6 +2256,7 @@ th {
 }
 
 .footer-container {
+  padding-top: 15px;
   background-color: rgb(218, 218, 218);
   font-family: 'Roboto', regular;
   display: flex;
