--- a/styles.css
+++ b/styles.css
@@ -2256,13 +2256,21 @@ th {
 }
 
 .footer-container {
-  padding: 15px;
   background-color: rgb(218, 218, 218);
   font-family: 'Roboto', regular;
-  display: flex;
-  justify-content: space-around;
   height: 50px;
   font-size: 14px;
+}
+.footer-list-elements {
+  display: flex;
+  justify-content: space-around;
+
+  padding-left: 20px;
+}
+
+.footer-list-elements li {
+  list-style: none;
+  margin-right: 10px;
 }
 
 @media (max-width: 576px) {
