--- a/styles.css
+++ b/styles.css
@@ -2253,18 +2253,19 @@ th {
     font-size: 10px;
   }
 }
-
+/*--------footer------- */
 .footer-container {
   background-color: rgb(218, 218, 218);
   font-family: 'Roboto', regular;
   height: 50px;
   font-size: 14px;
   padding: 10px;
+  padding-bottom: 20px;
 }
+
 .footer-list-elements {
   display: flex;
   justify-content: space-around;
-
   padding-left: 20px;
 }
 
@@ -2277,5 +2278,14 @@ th {
   .footer-container {
     font-family: 'Roboto', regular;
     font-size: 11px;
+    padding-bottom: 25px;
+  }
+}
+
+@media (max-width: 356px) {
+  .footer-container {
+    font-family: 'Roboto', regular;
+    font-size: 9px;
+    padding-bottom: 28px;
   }
 }
